<resources>
    <string name="attention">注意</string>
    <string name="delete_all">Delete all?</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="hello">Hello World!</string>
    <string name="app_name">Zapya</string>
    <string name="send">Send</string>
    <string name="close">Close</string>
    <string name="share_dialog_title">Sina Weibo</string>
    <string name="please_login">Please login</string>
    <string name="send_sucess">Share success!</string>
    <string name="send_failed">Share fail!</string>
    <string name="del_pic">Delete picture!</string>
    <string name="loading">Loading...</string>
    <string name="textIntro">请选择授权方式：</string>
    <string name="btnOAuthV1">OAuthV1授权（webview）</string>
    <string name="btnOAuthV1Helper">OAuthV1授权（Helper）</string>
    <string name="btnOAuthV2ImplicitGrant">OAuthV2ImplicitGrant授权（webview）</string>
    <string name="btnRequest">获取Request_token</string>
    <string name="btnAuthorize">用WebView请求用户授权</string>
    <string name="btnAccess">获取Access_token</string>
    <string name="btnAPItest">微博API测试</string>
    <string name="textRequest">获取到的Request_token：</string>
    <string name="textVerifier">验证码：</string>
    <string name="textAccess">获取到的Access_token：</string>
    <string name="btnGetUsrInfo">获取用户信息</string>
    <string name="btnSendMsg">发送文字微博</string>
    <string name="btnSendMsgWithPic">发送带图的文字微博</string>
    <string name="textResponse">返回信息：</string>
    <string name="btnImplicitGrant">使用ImplicitGrant方式授权</string>
    <string name="renren_sdk_title_label">发布到人人网</string>
    <string name="renren_sdk_title_upload_label">上传照片至人人</string>
    <string name="renren_sdk_album_name_label">相册名称</string>
    <string name="renren_sdk_album_visible_label">谁能浏览</string>
    <string name="renren_sdk_album_location_label">拍照地点</string>
    <string name="renren_sdk_album_description_label">照片描述</string>
    <string name="renren_sdk_submit">确定</string>
    <string name="renren_sdk_cancel">取消</string>
    <string name="renren_sdk_upload">上传</string>
    <string name="renren_sdk_album_name_hint">请输入相册名称</string>
    <string name="renren_sdk_album_location_hint">请输入拍照地点</string>
    <string name="renren_sdk_album_description_hint">请输入相册描述</string>
    <string name="renren_sdk_photo_caption_hint">请输入照片描述</string>
    <string name="renren_sdk_mobile_album">手机相册</string>
    <string name="renren_sdk_status_hint">你正在干嘛？</string>
    <string name="renren_sdk_status_publish_success">发布成功</string>
    <string name="renren_sdk_status_publish_failed">发布失败</string>
    <string name="renren_sdk_status_publish">发布</string>
    <string name="renren_sdk_status_cancel">取消</string>
    <string name="renren_sdk_long_status">状态长度的字数上限为</string>
    <string name="renren_sdk_publish_status_hint">发布中，请稍后</string>
    <string name="renren_sdk_object_init_error">程序重新初始化失败</string>
    <string name="renren_sdk_publish_null_status_alert">您还未输入内容，请输入后再试</string>
    <string name="renren_sdk_username">账号</string>
    <string name="renren_sdk_password">密码</string>
    <string name="renren_sdk_login">登录</string>
    <string name="renren_sdk_upload_photo_change_user"><u>切换账号</u></string>
    <string name="renren_sdk_pay_repair_overview"><u>订单概况</u></string>
    <string name="renren_sdk_pay_repair_remove_all">清除所有订单</string>
    <string name="renren_sdk_pay_repair_btn_text">修复订单</string>
    <string name="renren_sdk_pay_repair_order_number">订单编号:</string>
    <string name="renren_sdk_pay_repair_order_amount">订单金额:</string>
    <string name="renren_sdk_pay_repair_order_time">订单时间:</string>
    <string name="renren_sdk_pay_repair_order_bid">流水单号:</string>
    <string name="renren_sdk_pay_repair_order_des">订单描述:</string>
    <string name="renren_sdk_pay_repair_order_status">订单状态:</string>
    <string name="renren_sdk_loading">Loading...</string>
    <string name="dm_game_request">%1$sInvite you to battle with his ice hockey!</string>
    <string name="dm_game_reject">%1$s rejects your game request!</string>
    <string name="dm_game_request_ignored">%1$s is not responding</string>
    <string name="dm_game_reject_ingame">%1$s is in game!</string>
    <string name="dm_game_ask_exit">Are you sure exit?</string>
    <string name="dm_game_exit_tips">%1$s Exit</string>
    <string name="dm_game_exit">Exit</string>
    <string name="dm_game_restart">Again</string>
    <string name="dm_game_refuse">Refuse</string>
    <string name="dm_game_accept">Accept</string>
    <string name="app_cover_name">V1.0.1</string>
    <string name="translateach">Transmission achievements</string>
    <string name="medallist">Medal List</string>
    <string name="feed_contact">Contact</string>
    <string name="joinrequest">group invited</string>
    <string name="background_downloading">Downloading...</string>
    <string name="thank_your_ask">Thanks for your questions and suggestions!</string>
    <string name="feed_sure">Sure</string>
    <string name="into_platform">Enter forum</string>
    <string name="feed_text">You can also view more user feedback and tips to our official forum, your problem will be where and timely answers.</string>
    <string name="official_forum">Fast tooth official forum: bbs.kuaiya.cn</string>
    <string name="logining">Logged in, please wait ...</string>
    <string name="whethercreate">Whether to create group</string>
    <string name="name_size_hint_tips">Enter here the name of convenience friends recognize you</string>
    <string name="see_points">See Points</string>
    <string name="dm_login_start">Start</string>
    <string name="exchangerize">Exchange Prizes</string>
    <string name="congratulations">Congratulations, you get the title</string>
    <string name="see">See</string>
    <string name="cancle">Cancle</string>
    <string name="send_share_page_sms">Invite friends via Short Message and install Zapya in 30 seconds!In same Wi-Fi network, the recipient can retrieve the downloading information from the short message, click to download and install, and then establish friend connections.Without Wi-Fi network, the recipient can retrieve the downloading information of Zapya installation package (size=100K) from the short message.Running the installation package would automatically retrieve the full package from your mobile phone without incurring mobile data charges.</string>
    <string name="send_push_file_sms">"Any file, direct sharing to a friend! 
 friends will SMS for fast tooth installation version download (100K). after installation from your phone to automatically obtain the full version and file transfer, access to the process of zero flow. 
"</string>
    <string name="send_invite">Send invite</string>
    <string name="oper_hint">Receiver do as SMS hint</string>
    <string name="login">Login</string>
    <string name="obtain_verification_code">Obtain verification code</string>
    <string name="login_please">Please login</string>
    <string name="login_by_qq">Login Zapya by QQ</string>
    <string name="exit_warning">Do you want to exit?</string>
    <string name="dm_exit_share_to_sns">Do you want to Share to you sns?</string>
    <string name="exit_group_warning">Disconnect from your friends</string>
    <string name="exit_yes">Yes</string>
    <string name="exit_no">No</string>
    <string name="connect">Connect</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="notice">Notice</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_property">Property</string>
    <string name="menu_share">Share</string>
    <string name="menu_open">Open</string>
    <string name="menu_play">Play</string>
    <string name="menu_transport">Transport</string>
     <string name="menu_operation">Operation</string>
    <string name="menu_install">Install</string>
    <string name="menu_view">View</string>
    <string name="menu_friends">Search friends</string>
    <string name="menu_backup">Backup</string>
    <string name="musci_title_index">%1$d/%2$d</string>
    <string name="dm_menu_mobile">Move to Game</string>
    <string name="dm_menu_mobile2">Move to App</string>
    <string name="menu_update">Update</string>
    <string name="menu_more_op">More..</string>
    <string name="menu_invite">Local Invite</string>
    <string name="menu_user_profile">User Profile</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_hot">Hot</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_login">Login</string>
    <string name="menu_accountmgr">Account</string>
    <string name="menu_switchview">Switch View</string>
    <string name="menu_delete_record">Bulk delete</string>
    <string name="menu_default_sort">Default order</string>
    <string name="menu_exit">Exit</string>
    <string name="transe_sensitivity_low">Low</string>
    <string name="dm_transe_sensitivity">Action sensititvity</string>
    <string name="dm_set_transe_sensitivity">Set Sensitivity</string>
    <string name="title_browser">Files</string>
    <string name="title_audio">Media</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_apps">Apps</string>
    <string name="title_history">History</string>
    <string name="dm_dialog_name">Title:</string>
    <string name="dm_dialog_totalsize">Total:</string>
    <string name="dm_dialog_transize">Current:</string>
    <string name="dm_dialog_takes">Takes:</string>
    <string name="dm_dialog_type">Type:</string>
    <string name="dm_dialog_location">Location:</string>
    <string name="dm_dialog_sender">From:</string>
    <string name="dm_dialog_transdate">Transfer on:</string>
    <string name="dm_dialog_transstatus">Status:</string>
    <string name="dm_dialog_version">Version:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="sina_username">Weibo username</string>
    <string name="sina_password">Weibo password</string>
    <string name="filter">White list</string>
    <string name="dm_set_default_viewmode">Set default view mode</string>
    <string name="dm_viewmode_dialog_title">Set View Mode</string>
    <string name="dm_viewmode_default">Default Mode</string>
    <string name="dm_set_default_sort">Sort order</string>
    <string name="dm_sort_dialog_title">Choose Sort order</string>
    <string name="dm_common">Common</string>
    <string name="dm_traffic_statistics">Traffic statistics</string>
    <string name="dm_soft_ware">Software</string>
    <string name="dm_enable_sound">Enable sound</string>
    <string name="dm_enable_sound_summary">Enable or disable beep sound</string>
    <string name="dm_enable_vibrate">Enable vibrator</string>
    <string name="dm_enable_vibrate_summary">Enable or disable vibration</string>
    <string name="dm_enable_check_update">Auto check update</string>
    <string name="dm_enable_check_update_summary">check new version on start</string>
    <string name="dm_enable_auto_disconnect">Auto Disconnect</string>
    <string name="dm_enable_auto_disconnect_summ">Auto disconnect when running in background</string>
    <string name="dm_check_update_now">Check new version</string>
    <string name="dm_traffic_stat">Traffic statics</string>
    <string name="dm_pref_feedback">Feedback</string>
    <string name="dm_pref_aboutus">About</string>
    <string name="dm_pref_faq">FAQ</string>
    <string name="dm_pref_invite">Invite</string>
    <string name="dm_clear_cache">clear cache</string>
    <string name="dm_pref_privacy">privacy</string>
    <string name="dm_pref_receive_files">Receive files need to be confirmed</string>
    <string name="dm_pref_receive_files_summary">Receive files need to be confirmed</string>
    <string name="dm_storage_title">Default Storage</string>
    <string name="dm_storage_dlg_title">Set the default Storage for Zapya</string>
    <string name="dm_storage_sdcard">Internal Storage</string>
</resources>