<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/menu_hot" android:id="@id/menu_hot" android:title="@string/menu_hot" />
    <item android:icon="@drawable/menu_setup" android:id="@id/menu_settings" android:title="@string/menu_settings" />
    <item android:icon="@drawable/menu_view" android:id="@id/menu_switchview" android:visible="false" android:title="@string/menu_switchview" />
    <item android:icon="@drawable/menu_friends" android:id="@id/menu_weibofriends" android:title="@string/menu_friends" />
    <item android:icon="@drawable/menu_sort" android:id="@id/menu_sort" android:visible="false" android:title="@string/menu_sort" />
    <item android:icon="@drawable/menu_user_profile" android:id="@id/menu_user_profile" android:title="@string/menu_user_profile" />
    <item android:icon="@drawable/menu_registration" android:id="@id/menu_register" android:title="@string/menu_login" />
    <item android:icon="@drawable/menu_account_management" android:id="@id/menu_account" android:title="@string/menu_accountmgr" />
    <item android:icon="@drawable/menu_quit" android:id="@id/menu_exit" android:title="@string/menu_exit" />
</menu>