<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/renren_sdk_pay_repair_item" android:background="@color/renren_sdk_pay_repair_item_bg" android:paddingLeft="10.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/renren_sdk_pay_repair_order_number" />
        <TextView android:id="@id/renren_sdk_pay_repair_item_order_num" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/renren_sdk_pay_repair_order_amount" />
        <TextView android:id="@id/renren_sdk_pay_repair_item_amount" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/renren_sdk_pay_repair_order_time" />
        <TextView android:id="@id/renren_sdk_pay_repair_item_time" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/renren_sdk_pay_repair_order_bid" />
        <TextView android:id="@id/renren_sdk_pay_repair_item_bid" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/renren_sdk_pay_repair_order_des" />
        <TextView android:id="@id/renren_sdk_pay_repair_item_des" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/renren_sdk_pay_repair_order_status" />
        <TextView android:id="@id/renren_sdk_pay_repair_item_status" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <Button android:textSize="16.0sp" android:textColor="@color/renren_sdk_pay_repair_btn_text" android:id="@id/renren_sdk_pay_repair_item_repair_button" android:background="@drawable/renren_sdk_repair_btn_style" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/renren_sdk_pay_repair_btn_text" />
</LinearLayout>