<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dm_dialog_name" android:singleLine="true" style="@style/property_name" />
        <TextView android:ellipsize="middle" android:id="@id/name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="2" style="@style/property_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dm_dialog_type" android:singleLine="true" style="@style/property_name" />
        <TextView android:id="@id/type" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/property_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/version_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dm_dialog_version" android:singleLine="true" style="@style/property_name" />
        <TextView android:id="@id/version" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/property_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dm_dialog_location" android:singleLine="true" style="@style/property_name" />
        <TextView android:ellipsize="middle" android:id="@id/location" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="2" style="@style/property_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dm_dialog_totalsize" android:singleLine="true" style="@style/property_name" />
        <TextView android:id="@id/size" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/property_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dm_dialog_transize" android:singleLine="true" style="@style/property_name" />
        <TextView android:id="@id/transfer_size" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/property_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/oppo_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dm_dialog_sender" android:singleLine="true" style="@style/property_name" />
        <TextView android:id="@id/oppo_name" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/property_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dm_dialog_transstatus" android:singleLine="true" style="@style/property_name" />
        <TextView android:id="@id/status" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/property_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/takes_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dm_dialog_takes" android:singleLine="true" style="@style/property_name" />
        <TextView android:id="@id/takes" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/property_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dm_dialog_transdate" android:singleLine="true" style="@style/property_name" />
        <TextView android:id="@id/trans_date" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/property_content" />
    </LinearLayout>
</LinearLayout>