<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/gray" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/banner" layout="@layout/banner_right_next" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="34.0dip">
        <TextView android:textSize="16.0sp" android:textColor="#ff464646" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/username" />
        <com.dewmobile.kuaiya.ui.DmEditText android:textSize="14.0sp" android:textColor="#ff686868" android:id="@id/username" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:hint="@string/sina_username" android:singleLine="true" />
    </LinearLayout>
    <include layout="@layout/div_login" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="26.0dip">
        <TextView android:textSize="16.0sp" android:textColor="#ff464646" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password" />
        <com.dewmobile.kuaiya.ui.DmEditText android:textSize="14.0sp" android:textColor="#ff686868" android:id="@id/password" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:hint="@string/sina_password" android:password="true" android:singleLine="true" android:maxLength="16" />
    </LinearLayout>
    <include layout="@layout/div_login" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="22.0dip" android:layout_marginTop="22.0dip" android:layout_marginRight="22.0dip">
        <Button android:textSize="16.0sp" android:textColor="@color/white" android:id="@id/login" android:background="@drawable/button_green_right" android:layout_width="wrap_content" android:layout_height="50.0dip" android:text="@string/login" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>