<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:padding="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@*android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/renren_sdk_username" />
    <EditText android:id="@id/renren_sdk_login_entry_username" android:layout_width="240.0dip" android:layout_height="wrap_content" />
    <TextView android:textColor="@*android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/renren_sdk_password" />
    <EditText android:id="@id/renren_sdk_login_entry_password" android:layout_width="240.0dip" android:layout_height="wrap_content" android:inputType="textPassword" />
    <Button android:layout_gravity="center_horizontal" android:id="@id/renren_sdk_login_confirm_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/renren_sdk_login" />
</LinearLayout>